--- a/process-solution-java/pom.xml
+++ b/process-solution-java/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.berndruecker.demo</groupId>
-  <artifactId>covea-spring-boot</artifactId>
+  <artifactId>customer-onboarding-camunda-platform</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
-    <camunda.spring-boot.version>7.15.0-alpha5-ee</camunda.spring-boot.version>
+    <camunda.spring-boot.version>7.15.0-ee</camunda.spring-boot.version>
     <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -65,6 +66,13 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <configuration>
+          <mainClass>io.berndruecker.demo.onboarding.CustomerOnboardingApplication</mainClass>
+        </configuration>
       </plugin>
     </plugins>
   </build>
