--- a/worker-java/pom.xml
+++ b/worker-java/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.berndruecker.demo</groupId>
-  <artifactId>covea-worker-sim-provisioning</artifactId>
+  <artifactId>customer-onboarding-camunda-platform-worker-sim-provisioning</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
@@ -27,7 +27,7 @@
     <dependency>  
       <groupId>org.camunda.bpm.springboot</groupId>
       <artifactId>camunda-bpm-spring-boot-starter-external-task-client</artifactId>
-      <version>7.15.0-alpha5</version>
+      <version>7.15.0</version>
     </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
