--- a/worker-csharp/CustomerOnboardingWorker.csproj
+++ b/worker-csharp/CustomerOnboardingWorker.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Camunda.Api.Client" Version="2.6.0" />
     -->
     <PackageReference Include="Camunda.Worker" Version="0.11.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
   </ItemGroup>
 
 </Project>
