--- a/process-solution-java/pom.xml
+++ b/process-solution-java/pom.xml
@@ -6,7 +6,13 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
-    <camunda.spring-boot.version>7.15.0-ee</camunda.spring-boot.version>
+	<!-- 
+	  Adjust if you want to use Enterprise Edition of Camunda:
+	  <camunda.spring-boot.version>7.15.0-ee</camunda.spring-boot.version>
+	  Make sure you also switch to the ee webapp dependency below
+	  Get your trial here: https://camunda.com/download/enterprise/
+	-->
+    <camunda.spring-boot.version>7.15.0</camunda.spring-boot.version>
     <spring-boot.version>2.3.4.RELEASE</spring-boot.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -26,8 +32,12 @@
   
   <dependencies>
     <dependency>
+	  <!-- 
+	    Adjust if you want to use Enterprise Edition of Camunda:
+	    <artifactId>camunda-bpm-spring-boot-starter-webapp-ee</artifactId>
+	   -->    	
       <groupId>org.camunda.bpm.springboot</groupId>
-      <artifactId>camunda-bpm-spring-boot-starter-webapp-ee</artifactId>
+      <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
       <version>${camunda.spring-boot.version}</version>
     </dependency>
     <dependency>
