--- a/process-solution-java/pom.xml
+++ b/process-solution-java/pom.xml
@@ -58,6 +58,12 @@
       <artifactId>jaxb-impl</artifactId>
       <version>2.2.3</version>
     </dependency>
+    <!-- for simple starter website -->
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>jquery</artifactId>
+      <version>3.6.0</version>
+    </dependency>
   </dependencies>
 
    <build>
